fix(ui): Adjust channel header title line-height to prevent text cropping [RM-591414]

--- a/webapp/channels/src/sass/layout/_headers.scss
+++ b/webapp/channels/src/sass/layout/_headers.scss
@@ -217,7 +217,7 @@
         font-family: var(--font-family);
         font-size: 16px;
         font-weight: 600;
-        line-height: 16px;
+        line-height: 20px;
         text-overflow: ellipsis;
         white-space: nowrap;
     }
